--- a/composer.json
+++ b/composer.json
@@ -36,9 +36,9 @@
     "require-dev": {
         "container-interop/container-interop": "^1.1",
         "sandrokeil/interop-config": "^1.0",
-        "phpunit/phpunit": "~5.3",
+        "phpunit/phpunit": "^5.4",
         "phpspec/prophecy": "^1.6",
-        "fabpot/php-cs-fixer": "1.7.*",
+        "fabpot/php-cs-fixer": "^1.11.0",
         "satooshi/php-coveralls": "^1.0",
         "zendframework/zend-servicemanager": "^2.7 || ^3.0"
     },
