--- a/composer.json
+++ b/composer.json
@@ -35,16 +35,16 @@
     },
     "require-dev": {
         "container-interop/container-interop": "^1.1",
-        "prooph/event-store": "^6.3",
-        "sandrokeil/interop-config": "^1.0",
+        "friendsofphp/php-cs-fixer": "^1.11.4",
         "phpunit/phpunit": "^5.4",
         "phpspec/prophecy": "^1.6",
-        "fabpot/php-cs-fixer": "^1.11.0",
+        "prooph/event-store" : "^6.3",
+        "sandrokeil/interop-config": "^1.0",
         "satooshi/php-coveralls": "^1.0",
         "zendframework/zend-servicemanager": "^2.7 || ^3.0"
     },
     "suggest" : {
-        "prooph/event-store": "Let the EventBus dispatch persisted DomainEvents",
+        "prooph/event-store": "Let the EventBus dispatch persisted domain events",
         "zendframework/zend-servicemanager": "For usage of provided factories",
         "container-interop/container-interop": "For usage of provided factories",
         "sandrokeil/interop-config": "For usage of provided factories"
