--- a/composer.json
+++ b/composer.json
@@ -41,7 +41,8 @@
         "prooph/event-store" : "^6.3",
         "sandrokeil/interop-config": "^1.0",
         "satooshi/php-coveralls": "^1.0",
-        "zendframework/zend-servicemanager": "^2.7 || ^3.0"
+        "zendframework/zend-servicemanager": "^2.7 || ^3.0",
+        "tobiju/bookdown-bootswatch-templates": "^1.0"
     },
     "suggest" : {
         "prooph/event-store": "Let the EventBus dispatch persisted domain events",
