--- a/composer.json
+++ b/composer.json
@@ -35,10 +35,11 @@
     },
     "require-dev": {
         "container-interop/container-interop": "^1.1",
-        "friendsofphp/php-cs-fixer": "^1.11.6",
-        "phpunit/phpunit": "^5.4",
+        "friendsofphp/php-cs-fixer": "^1.12.3",
+        "phpunit/phpunit": "^5.6",
         "phpspec/prophecy": "^1.6",
         "prooph/event-store" : "^6.3",
+        "react/promise": "^2.4.1",
         "sandrokeil/interop-config": "^1.0",
         "satooshi/php-coveralls": "^1.0",
         "zendframework/zend-servicemanager": "^2.7 || ^3.0",
@@ -46,7 +47,7 @@
     },
     "suggest" : {
         "prooph/event-store": "Let the EventBus dispatch persisted domain events",
-        "zendframework/zend-servicemanager": "For usage of provided factories",
+        "react/promise": "For usage with query producer",
         "container-interop/container-interop": "For usage of provided factories",
         "sandrokeil/interop-config": "For usage of provided factories"
     },
