--- a/composer.json
+++ b/composer.json
@@ -28,22 +28,23 @@
     "prefer-stable": true,
     "require": {
         "php": "~7.0",
-        "beberlei/assert": "~2.5",
-        "prooph/common" : "~3.7",
+        "beberlei/assert": "^2.7.1",
         "prolic/humus-amqp": "^1.0",
-        "prooph/service-bus" : "^5.1"
+        "prooph/common" : "^4.0-dev",
+        "prooph/service-bus" : "^6.0-dev"
     },
     "require-dev": {
         "container-interop/container-interop": "^1.1",
-        "friendsofphp/php-cs-fixer": "^1.12.3",
-        "phpunit/phpunit": "^5.6",
-        "phpspec/prophecy": "^1.6",
-        "prooph/event-store" : "^6.3",
+        "phpspec/prophecy": "dev-patch-1 as 1.6.2",
+        "prooph/php-cs-fixer-config": "^0.1.1",
+        "phpunit/phpunit": "^5.7",
+        "prooph/event-store" : "^7.0-dev",
         "react/promise": "^2.4.1",
-        "sandrokeil/interop-config": "^1.0",
+        "sandrokeil/interop-config": "^2.0.1",
         "satooshi/php-coveralls": "^1.0",
-        "zendframework/zend-servicemanager": "^2.7 || ^3.0",
-        "tobiju/bookdown-bootswatch-templates": "^1.0"
+        "zendframework/zend-servicemanager": "^3.1",
+        "prooph/bookdown-template": "^0.2.3",
+        "malukenho/docheader": "^0.1.4"
     },
     "suggest" : {
         "prooph/event-store": "Let the EventBus dispatch persisted domain events",
@@ -52,7 +53,7 @@
         "sandrokeil/interop-config": "For usage of provided factories"
     },
     "conflict": {
-        "sandrokeil/interop-config": "<1.0"
+        "sandrokeil/interop-config": "<2.0.1"
     },
     "autoload": {
         "psr-4": {
@@ -72,5 +73,11 @@
         "cs": "php-cs-fixer fix -v --diff --dry-run",
         "cs-fix": "php-cs-fixer fix -v --diff",
         "test": "phpunit"
-    }
+    },
+    "repositories": [
+        {
+            "type": "git",
+            "url": "https://github.com/prolic/prophecy.git"
+        }
+    ]
 }
