--- a/composer.json
+++ b/composer.json
@@ -31,14 +31,14 @@
         "beberlei/assert": "^2.7.1",
         "prolic/humus-amqp": "^1.0",
         "prooph/common" : "^4.0-dev",
-        "prooph/service-bus" : "^6.0-dev"
+        "prooph/service-bus" : "^6.0-beta3"
     },
     "require-dev": {
         "container-interop/container-interop": "^1.1",
         "phpspec/prophecy": "dev-patch-1 as 1.6.2",
         "prooph/php-cs-fixer-config": "^0.1.1",
         "phpunit/phpunit": "^5.7",
-        "prooph/event-store" : "^7.0-dev",
+        "prooph/event-store" : "^7.0-beta2",
         "react/promise": "^2.4.1",
         "sandrokeil/interop-config": "^2.0.1",
         "satooshi/php-coveralls": "^1.0",
