--- a/composer.json
+++ b/composer.json
@@ -27,18 +27,18 @@
     "minimum-stability": "dev",
     "prefer-stable": true,
     "require": {
-        "php": "~7.0",
+        "php": "^7.1",
         "beberlei/assert": "^2.7.1",
         "prolic/humus-amqp": "^1.0",
-        "prooph/common" : "^4.0-dev",
-        "prooph/service-bus" : "^6.0-beta3"
+        "prooph/common" : "^4.0",
+        "prooph/service-bus" : "^6.0"
     },
     "require-dev": {
         "container-interop/container-interop": "^1.1",
-        "phpspec/prophecy": "dev-patch-1 as 1.6.2",
+        "phpspec/prophecy": "^1.7",
         "prooph/php-cs-fixer-config": "^0.1.1",
-        "phpunit/phpunit": "^5.7",
-        "prooph/event-store" : "^7.0-beta2",
+        "phpunit/phpunit": "^6",
+        "prooph/event-store" : "^7.0-beta4",
         "react/promise": "^2.4.1",
         "sandrokeil/interop-config": "^2.0.1",
         "satooshi/php-coveralls": "^1.0",
@@ -73,11 +73,5 @@
         "cs": "php-cs-fixer fix -v --diff --dry-run",
         "cs-fix": "php-cs-fixer fix -v --diff",
         "test": "phpunit"
-    },
-    "repositories": [
-        {
-            "type": "git",
-            "url": "https://github.com/prolic/prophecy.git"
-        }
-    ]
+    }
 }
