--- a/composer.json
+++ b/composer.json
@@ -66,6 +66,11 @@
             "ProophTest\\EventStore\\": "vendor/prooph/event-store/tests/"
         }
     },
+    "config": {
+        "preferred-install": {
+            "prooph/*": "source"
+        }
+    },
     "scripts": {
         "check": [
             "@cs",
