--- a/composer.json
+++ b/composer.json
@@ -30,7 +30,7 @@
         "php": "^7.1",
         "beberlei/assert": "^2.7.1",
         "prolic/humus-amqp": "^1.0",
-        "prooph/common" : "^4.0",
+        "prooph/common" : "^4.1",
         "prooph/service-bus" : "^6.0"
     },
     "require-dev": {
@@ -38,18 +38,17 @@
         "phpspec/prophecy": "^1.7",
         "prooph/php-cs-fixer-config": "^0.1.1",
         "phpunit/phpunit": "^6.0",
-        "prooph/event-store" : "^7.0-beta4",
+        "prooph/event-store" : "^7.0",
         "react/promise": "^2.4.1",
         "sandrokeil/interop-config": "^2.0.1",
         "satooshi/php-coveralls": "^1.0",
-        "zendframework/zend-servicemanager": "^3.1",
         "prooph/bookdown-template": "^0.2.3",
         "malukenho/docheader": "^0.1.4"
     },
     "suggest" : {
-        "prooph/event-store": "Let the EventBus dispatch persisted domain events",
+        "prooph/event-store": "^7.0 let the EventBus dispatch persisted domain events",
         "react/promise": "For usage with query producer",
-        "container-interop/container-interop": "For usage of provided factories",
+        "psr/container": "^1.0 for usage of provided factories",
         "sandrokeil/interop-config": "For usage of provided factories"
     },
     "conflict": {
