--- a/composer.json
+++ b/composer.json
@@ -28,7 +28,7 @@
     "prefer-stable": true,
     "require": {
         "php": "^7.1",
-        "beberlei/assert": "^2.7.1",
+        "beberlei/assert": "^2.7.1 || ^3.0",
         "prolic/humus-amqp": "^1.0",
         "prooph/common" : "^4.1",
         "prooph/service-bus" : "^6.0"
